# FoxEmu

./: .travis.yml  Debug.bat  README.md
cmake/: genrev.cmake  options.cmake  showoptions.cmake
cmake/macros/: CheckBuildDir.cmake  FindGit.cmake
dep/: CMakeLists.txt
dep/enet/: enet.h  protocol.cpp
dep/lua/: CMakeLists.txt
dep/raf/: FileReader.h  MemoryReader.h  RAFFile.cpp  RAFFile.h  RAFManager.cpp
dep/sol/: CMakeLists.txt  types.hpp
src/: CMakeLists.txt
src/game/: CMakeLists.txt
src/gamed/: CMakeLists.txt  Game.cpp  Game.h  Handlers.cpp  Logger.cpp  LuaChampion.cpp  LuaScript.h  Map.cpp  Object.h  Packets.h  Pathfinder.cpp  Spell.cpp  Spell.h  gameserver.conf.dist  gameserver.rc  main.cpp
src/gamenode/: CMakeLists.txt
src/genrev/: CMakeLists.txt
utils/: HashGenerator.cpp
utils/wireshark/: README.md
